refactor: enhance HiGHS library loading with fallback to bundled binaries